# LuLu-Attendance-Management-System

./: .env  .gitignore  Cargo.toml  Readme.md
LuLu-BackEnd/: Cargo.toml
LuLu-BackEnd/data test/: data.sql
LuLu-BackEnd/migrations/: 20250719122910_session.sql  20250728121311_employee.sql  20250728121521_fingers.sql  20250728191311_log.sql  20250801090732_commands.sql  20250801090732_devices.sql  20250801090943_handlers.sql  20250801091027_view_reports.sql
LuLu-BackEnd/src/: lib.rs  main.rs
LuLu-BackEnd/src/converter/adms/: management_user.rs
LuLu-BackEnd/src/handler/: h_device.rs  h_employee.rs  h_login.rs  h_report.rs  h_shift.rs  h_transaction.rs
LuLu-BackEnd/src/handler/adms/: h_getrequest.rs
LuLu-BackEnd/src/models/: m_command.rs  m_employee.rs  m_report.rs  m_schedule.rs  m_shift.rs  m_transaction.rs  m_user.rs
LuLu-BackEnd/src/receiver/: r_device.rs  r_employee.rs  r_login.rs  r_schedule.rs  r_transaction.rs
LuLu-BackEnd/src/utility/: authorization.rs  db.rs  hash.rs  helper.rs  router.rs  stor.rs
LuLu-ForntEnd/: nuxt.config.ts  package-lock.json  package.json
LuLu-FrontEnd/: bun.lockb  package-lock.json  package.json
data test/: data.sql  login.info
migrations/: 20241128101513_devices.sql  20250528121311_employee.sql  20250528131311_enroll.sql  20250528131311_log.sql  20250601131512_cmd.sql  20250601131512_fingers.sql  20250608130703_schedule.sql  20250608130703_shift.sql  20250609132910_session.sql  20250609132910_user.sql  20250711158512_fingers.sql  20250711191522_cmd.sql  20250718120703_schedule.sql  20250718120703_shift.sql  (+3 more)
(+79 files in other folders)
